tests/snapshots/scripts_sanitized/Admin API Tool/Database Server - ID 12/Update Restrict Access - ID 172.txt.snap
---
source: src/main.rs
expression: output_content
---
#  PURPOSE: Update Server Progressive Backup Folder Path
#  HISTORY:
     - Created:   2020-01-19 by Mike Duncan (mduncan@soliantconsulting.com)
     - Modified:  2020-00-00 

AnwenderAbbruchZulassen setzen [ ON ]
Fehleraufzeichnung setzen [ ON ]
Variable setzen [ $error ; 0 ]

# -------------------------------------------------------------
#  SET-UP
# -------------------------------------------------------------
Script ausführen [ Aus Liste ; "Set Config" ]
Variable setzen [ $endpoint ; "/server/restrictaccess" ]
Variable setzen [ $json ; JSONSetElement ( "" 
				 ; [ "restrictIPEnabled"; FMS__fmserver::restrictIPEnabled ; JSONBoolean ]
				 ; [ "restrictIPList"; FMS__fmserver::restrictIPList ; JSONString ]
				) ]

Variable setzen [ $curloptions ; " --request PATCH" &
				" --header \"Authorization: Bearer " & $$my.token & "\"" &
				" --header \"Content-Type: application/json\"" &
				" --data @$json" &
				" --dump-header $$my.headers" ]
# set api update variable
Variable setzen [ $$API.UPDATE ; "1" ]

# -------------------------------------------------------------
#  PROCESS
# -------------------------------------------------------------
Aus URL einfügen ⚠️⚠️⚠️ FM-XML-EXPORT-EXPLODER: UNKNOWN SCRIPT-STEP [ ID: "160" ] ⚠️⚠️⚠️
Script ausführen [ Aus Liste ; "Handle response" ]

Wenn [ Hole ( ScriptErgebnis ) = "1" ]
	# parse json response
	Feldwert setzen [ FMS__fmserver::restrictIPEnabled ; JSONGetElement ( $$my.result ; "response.restrictIPEnabled" ) ]
	Feldwert setzen [ FMS__fmserver::restrictIPList ; JSONGetElement ( $$my.result ; "response.restrictIPList" ) ]
Ende (wenn)

# -------------------------------------------------------------
#  CLEAN UP
# -------------------------------------------------------------
Wenn [ $error = 0 ]
	#  set to exit true if you do not need to pass an error
	Variable setzen [ $error ; 1 // exit true ]
Ende (wenn)

Aktuelles Script verlassen [ $error ]
